# agentic

./: .gitignore  .mcp.json  AGENTIC_CHALLENGE_ISSUES.md  ARCHITECTURE.md  DEPLOYMENT.md  HOW_TO_TRIGGER_ADW.md  README.md  TEST_RESULTS.md  playwright-mcp-config.json
.claude/: settings.json
adws/: ENHANCEMENTS_README.md  PARSING_ANALYSIS.md  README.md
app/server/: .env.sample  main.py  pyproject.toml  server.py
app/server/core/: __init__.py
app/server/db/: backup.db
app/server/tests/: __init__.py  test_placeholder.py
app_docs/: agentic_kpis.md  bug-7ba88138-black-text-edit-form.md  chore-7fb918fe-comprehensive-documentation.md  feature-1faaeccf-bold-user-card-fields.md  feature-20baf7ca-dashboard-search-filter.md  feature-216fce1d-user-card-component.md  feature-287fdce1-mock-backend-api.md  feature-4c8ea440-dashboard-user-profiles.md  feature-4dbe98e6-fixed-header-user-list.md  feature-60c16f2f-nextjs-vercel-setup.md  feature-6d548c35-prepopulate-edit-form.md  feature-77a988ed-about-page.md  feature-82ffb118-admin-user-management.md  feature-8e7e99d7-mock-user-database.md  feature-91018a17-responsive-navigation-layout.md  feature-a6dbe942-search-bar-label.md  feature-b742df28-avatar-loading-fix.md  feature-be42571c-back-button-right.md  feature-bfb6956a-search-dropdown-styling.md  feature-ca241132-auth-system.md  feature-cef3a9ed-loading-states-error-handling.md  feature-d54beab1-user-details-page.md  feature-f6170557-hover-effect-cards.md
challenge_issues/: README.md  issue_01.md  issue_02.md  issue_03.md  issue_04.md  issue_05.md  issue_06.md  issue_07.md  (+3 more)
(+109 files in other folders)
